Current Assignments: Screen Manager, Interface

- Gameplay Designer
Wasiem - arabwes - Cell: 313-234-3263
- Game1.cs
Current Assignment: GameDesign

//////////////////////////////////////////////////////////////////////////

- Project Over View
- Create a C# XNA Game Engine that is reusable.
- Focus your efforts on the Fish Game, A Was's Waldo style game

//////////////////////////////////////////////////////////////////////////


//////////////////////////////////////////////////////////////////////////
// Example Format --													//
//////////////////////////////////////////////////////////////////////////
// XNAGameEngine | Hypo Klarich | 3/11/2014								//
// -CollisionManager.cs -Game1.cs -GameInterface.cs -GameObject.cs		//
// -Time: 11am - 1:38pm = 2:38											//
// -Notes: Collision is up and running. This is an un-optimized version //
// but is good enough for or first few projects.						//
//////////////////////////////////////////////////////////////////////////


XNAGameEngine | Michael Villar | 3/11/2014								
 -(New) Debug.cs - Game1.cs		
 -Time: 12pm - 1:08am = 1:08											
 -Notes: Debugger is good to go. Used exact same way as previous games.
 Open Debug.spritefont (Content) to change font attributes. This will
 make the default font.	

XNAGameEngine | Hypo Klarich | 3/11/2014								
 -CollisionManager.cs -Game1.cs -GameInterface.cs -GameObject.cs		
 -Time: 11am - 1:38pm = 2:38											
 -Notes: Collision is up and running. This is an un-optimized version 
	 but is good enough for or first few projects.	

XNAGameEngine | Hypo Klarich | 3/11/2014
-CollisionManager.cs -Game1.cs -PhysicsManager.cs
-Time 6:00 pm - 8:20pm = 2:20
-Notes: Added Physics to the game objects and broke the physics quite
	spectacularly. I'll get it fixed but it's not a top priorety

XNAGameEngine | Hypo Klarich | 3/11/2014
-CollisionManager.cs -Game1.cs -PhysicsManager.cs
-Time 8:30 pm - 9:30pm = 1:10
-Notes: Fixed the Physics and borke it some more...
  
