@@ -110,6 +110,7 @@
     <Compile Include="Animation.cs" />
     <Compile Include="CollisionManager.cs" />
     <Compile Include="Debug.cs" />
+    <Compile Include="FpsManager.cs" />
     <Compile Include="GameInterface.cs" />
     <Compile Include="GameObject.cs" />
     <Compile Include="PhysicsManager.cs" />
